--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ DB_PORT=3306
 DB_DATABASE=basicsapi_test
 DB_USERNAME=basicsapi_test
 DB_PASSWORD=basicsapi_test
-DB_PREFIX=jbh_
+DB_PREFIX=xw_
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
